@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Improve Oracle compatibility.
 * [mjr] Fix content-type for screen images to be compatible with some versions of IE.
  </notes>
  <contents>
@@ -640,7 +641,7 @@
    <package>
     <name>Horde_Db</name>
     <channel>pear.horde.org</channel>
-    <min>2.0.3</min>
+    <min>2.2.0</min>
     <max>3.0.0alpha1</max>
     <exclude>3.0.0alpha1</exclude>
    </package>
@@ -1376,6 +1377,7 @@
    <date>2015-07-31</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Improve Oracle compatibility.
 * [mjr] Fix content-type for screen images to be compatible with some versions of IE.
    </notes>
   </release>
