@@ -2,6 +2,7 @@
 v3.0.4-git
 ----------
 
+[jan] Improve Oracle compatibility.
 [mjr] Fix content-type for screen images to be compatible with some versions
       of IE.
 
